testsuite/positive/Issue-1294.n
//using Nemerle.Collections;

using System.Console;
using System.Collections.Generic;
using SCG = System.Collections.Generic;

public module Program
{
  public Foo() : IEnumerable[int]
  {
    def f()
    {
      foreach(_ in [] : IEnumerable[int]) //error
        (); 

      1
    }
    repeat(3)
      yield f();
  }
  
  public Main() : void
  {
    foreach (x in Foo())
      WriteLine(x);
  }


}

/*
BEGIN-OUTPUT
1
1
1
END-OUTPUT
*/