testsuite/negative/delayed-macro-colors.n
def foo(lst) { lst.Map(Nemerle.Collections.NList.IsEmpty) }
foreach (_ in foo([]))
  _ = x // E: unbound
 
